--- a/gallery.html
+++ b/gallery.html
@@ -41,7 +41,7 @@
     </span>
   </div>
   <div class="gallery">
-      <a href="images/g1.jpg" data-lightbox="mygallery"> <img src="images/g1.jpg"width="400px" height="250px"></a>
+      <a href="images/pic1.jpeg" data-lightbox="mygallery"> <img src="images/pic1.jpeg"width="400px" height="250px"></a>
       <a href="images/g2.jpg" data-lightbox="mygallery"> <img src="images/g2.jpg"width="400px" height="250px"></a>
       <a href="images/g3.jpg" data-lightbox="mygallery"> <img src="images/g3.jpg"width="400px" height="250px"></a>
       <a href="images/g4.jpg" data-lightbox="mygallery"> <img src="images/g4.jpg"width="400px" height="250px"></a>
