--- a/index.html
+++ b/index.html
@@ -233,9 +233,9 @@
 </footer>
 <!-------------------WhatsApp----------------->
 <div class="whatsapp">
-  <a href="https://api.whatsapp.com/send?phone=91123456789&text=Hello this is the starting message" class="float" target="_blank">
+  <a href="https://api.whatsapp.com/send?phone=9620717017&text=Hello this is (Enter your name) class="float" target="_blank">
   <i class="fa fa-whatsapp my-float"></i>
-  <p>Chat With Us</p>
+  <p>Chat With Everyone</p>
   </a>
   </div>
 </body>
